# mycel

./: .gitignore  LEARNINGS.md  README.md  package-lock.json  package.json  pyproject.toml  tb11b_results.json  tsconfig.json
.github/workflows/: problem-cases-sync.yml
config/: example.yaml
data/: tb05_conversations.json  tb06_routing_dataset.json  tb07_promise_dataset.json  tb11_verification_dataset.json  tb11_verification_results.json  tb11b_hard_prompts.json
docs/: BRANCHING-STRATEGY.md  DESIGN.md  INTEGRATION.md  OPENCLAW-ANALYSIS.md  PHASE1-PLAN.md  PITCH.md  PROBLEM-CASES.md  ROADMAP.md  TEMPORAL-HOSTING.md  TRACER-BULLET-DEPS.md  TRACER-BULLET-RESULTS.md  TRACER-BULLETS.md  TWO_BOT_COEXISTENCE.md  openai-reasoning-items-reference.md
reference/: DEEP-DIVE.md  DESIGN.md  INTEGRATION-PLAN.md  ROADMAP.md
scripts/: render_problem_cases.py  run_phase1_bot.py  run_tb10_dual_bot.sh  schedule_tb09_followups.py  stress_tb01.py  test_tb01.sh  test_tb02_idempotency.py  test_tb03_resilience.py  test_tb04_streaming.py  test_tb05_extraction.py  test_tb06_routing.py  test_tb07_promises.py  test_tb08_safety.py  test_tb09_durable.py  test_tb10_coexistence.py  test_tb11_verification.py  test_tb11b_verification.py  test_tb12_memory.py  test_tb12b_comparison.py
src/: contracts.ts  index.ts  worker.ts
test/: integration.test.ts
tests/: test_m_fetch.py  test_m_note.py  test_namespaces.py  test_ping_workflow.py  test_status_format.py  test_tb02_idempotency.py  test_tb03_integration.py  test_tb04_streaming.py  test_tb09_followup.py  test_tb10_namespaces.py  test_tb12_storage.py  test_workflow.py
(+74 files in other folders)
